--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="product">
         <h2 class="product-category">Best Seller</h2>
         <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
-        <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
+        <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
@@ -71,9 +71,58 @@
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">10% off</span>
+                    <img src="img/card5.png" class="product-thumb" alt="">
+                    <button class="card-btn">Add to whishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloth..</p>
+                    <span class="price">₱450</span><span class="actual-price">₱500</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">10% off</span>
+                    <img src="img/card6.png" class="product-thumb" alt="">
+                    <button class="card-btn">Add to whishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloth..</p>
+                    <span class="price">₱450</span><span class="actual-price">₱500</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">10% off</span>
+                    <img src="img/card7.png" class="product-thumb" alt="">
+                    <button class="card-btn">Add to whishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloth..</p>
+                    <span class="price">₱450</span><span class="actual-price">₱500</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">10% off</span>
+                    <img src="img/card8.png" class="product-thumb" alt="">
+                    <button class="card-btn">Add to whishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloth..</p>
+                    <span class="price">₱450</span><span class="actual-price">₱500</span>
+                </div>
+            </div>
         </div>
     </section>
     <script src="nav.js"></script>
+    <script src="home.js"></script>
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
