--- a/index.html
+++ b/index.html
@@ -4,34 +4,34 @@
 
     <Title>Pobeguada Flower Store</Title>
     <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="nav.css">
+
 
 </head>
 <body>
 
     <nav class="navbar"></nav>
-
+ <!---header main page -------->  
     <header class="hero-section">
         <div class="content">
             <img src="img/light-logo.png" class="logo" alt="">
-            <p class="sub-heading">Best Flower Store in the World!!!</p>
+            <p class="sub-heading">2nd most trusted Flower Store in Quezon City</p>
         </div>
     </header>   
-    <!--  -------------------cards containers--------------------------  -->
+    <!--  -------------------cards containers------------------------------------------>
     <section class="product">
-        <h2 class="product-category">Best Seller</h2>
+        <h2 class="product-category">Grand Sale</h2>
         <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
         <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">10% off</span>
+                    <span class="discount-tag">15% off</span>
                     <img src="img/card1.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <p class="product-short-des">a short line about the boquet..</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <p class="product-short-des">a short line about the boquet.</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <p class="product-short-des">a short line about the boquet.</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <p class="product-short-des">a short line about the boquet.</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <p class="product-short-des">a short line about the boquet.</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <p class="product-short-des">a short line about the boquet.</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <p class="product-short-des">a short line about the boquet.</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
@@ -115,12 +115,49 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <p class="product-short-des">a short line about the boquet.</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
         </div>
     </section>
+    <!-- ---------------------flower collections -------------------------------------->
+<section class="collection-container">
+    <a href="#" class="collection">
+        <img src="img/women-collection.png" alt="">
+        <p class="collection-title">flowers</p>
+    </a>
+    <a href="#" class="collection">
+        <img src="img/men-collection.png" alt="">
+        <p class="collection-title">plants</p>
+    </a>
+    <a href="#" class="collection">
+        <img src="img/accessories-collection.png" alt="">
+        <p class="collection-title">gift sets</p>
+    </a>
+</section>
+<!-- Reusable footer for the whole website--------------------------------------------->
+<footer>
+    <div class="footer-content">
+        <img src="img/light-logo.png " class="logo" alt="">
+        <div class="footel-ul-container">
+            <ul class="category">
+                <li class="category-title">about us</li>
+                <li><a href="#" class="footer-link">facebook page</li>
+                <li><a href="#" class="footer-link">Twitter</li>
+                <li><a href="#" class="footer-link">LinkedIn</li>
+                <li><a href="#" class="footer-link"></li>
+            </ul>
+        </div>
+        
+    </div>
+    <p class="footer-title">about company</p>
+    <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Omnis praesentium esse neque, ipsum dolorum blanditiis quos suscipit voluptatem facilis. 
+    Suscipit libero repudiandae nemo est ut dolor rem eligendi voluptatibus quod.</p>
+</footer>
+
+<!--Call respective javascript files to apply functions of the website -->
     <script src="nav.js"></script>
     <script src="home.js"></script>
     <script type="module">
