added product papage and added footer js for reuse

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
         </div>
     </section>
-    <!-- ---------------------flower collections -------------------------------------->
+    <!-- ---------------------collections -------------------------------------->
 <section class="collection-container">
     <a href="#" class="collection">
         <img src="img/women-collection.png" alt="">
@@ -137,29 +137,12 @@
     </a>
 </section>
 <!-- Reusable footer for the whole website--------------------------------------------->
-<footer>
-    <div class="footer-content">
-        <img src="img/light-logo.png " class="logo" alt="">
-        <div class="footel-ul-container">
-            <ul class="category">
-                <li class="category-title">about us</li>
-                <li><a href="#" class="footer-link">facebook page</li>
-                <li><a href="#" class="footer-link">Twitter</li>
-                <li><a href="#" class="footer-link">LinkedIn</li>
-                <li><a href="#" class="footer-link"></li>
-            </ul>
-        </div>
-        
-    </div>
-    <p class="footer-title">about company</p>
-    <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Omnis praesentium esse neque, ipsum dolorum blanditiis quos suscipit voluptatem facilis. 
-    Suscipit libero repudiandae nemo est ut dolor rem eligendi voluptatibus quod.</p>
-</footer>
+<footer></footer>
 
 <!--Call respective javascript files to apply functions of the website -->
     <script src="nav.js"></script>
     <script src="home.js"></script>
+    <script src="footer.js"></script>
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
