added product description and added product js function

--- a/product.html
+++ b/product.html
@@ -42,6 +42,7 @@
 
     <section class="detail-des">
         <h2 class="heading">description</h2>
+        <p class="des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur officia molestiae quam nihil nisi illo enim consectetur dolorum sed, libero sunt saepe expedita accusamus eum, ullam possimus laborum magnam fugiat?</p>
     </section>
 
     <!------------- Product catalog ----------------------->
