organize css and js files and moved them to a folder, inedit yung html files para ma get ng html yung mga css at js files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <Title>Pobeguada Flower Store</Title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="css-files/home.css">
 
 
 </head>
@@ -125,11 +125,11 @@
 <section class="collection-container">
     <a href="#" class="collection">
         <img src="img/women-collection.png" alt="">
-        <p class="collection-title">flowers</p>
+        <p class="collection-title">flowers <br> collection</p>
     </a>
-    <a href="#" class="collection">
+    <a href="plantscollection.html" class="collection">
         <img src="img/men-collection.png" alt="">
-        <p class="collection-title">plants</p>
+        <p class="collection-title">plants <br> collection</p>
     </a>
     <a href="#" class="collection">
         <img src="img/accessories-collection.png" alt="">
@@ -140,9 +140,9 @@
 <footer></footer>
 
 <!--Call respective javascript files to apply functions of the website -->
-    <script src="nav.js"></script>
-    <script src="home.js"></script>
-    <script src="footer.js"></script>
+    <script src="js-files/nav.js"></script>
+    <script src="js-files/home.js"></script>
+    <script src="js-files/footer.js"></script>
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
