--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page not found</title>
 
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="404.css">
+    <link rel="stylesheet" href="css-files/home.css">
+    <link rel="stylesheet" href="css-files/404.css">
 </head>
 <body>
     <nav class="navbar"></nav>
@@ -16,6 +16,6 @@
         <p class="four-0-four-msg">Sorry!, Cant find what you're looking for. Head back to <a href="index.html">homepage</a></p>
     </form>
     
-    <script src="nav.js"></script>
+    <script src="js-files/nav.js"></script>
 </body>
 </html>
