--- a/product.html
+++ b/product.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>Product Catalog</title>
-    <link rel="stylesheet " href="home.css">
-    <link rel="stylesheet " href="product.css">
+    <link rel="stylesheet " href="css-files/home.css">
+    <link rel="stylesheet " href="css-files/product.css">
 </head>
 <body>
     <nav class="navbar"></nav>
@@ -256,9 +256,9 @@
     
     <footer></footer>
 <!-----------importing the static templates----------------------->
-    <script src="nav.js"></script>
-    <script src="footer.js"></script>
-    <script src="home.js"></script>
-    <script src="product.js"></script>
+    <script src="js-files/nav.js"></script>
+    <script src="js-files/footer.js"></script>
+    <script src="js-files/home.js"></script>
+    <script src="js-files/product.js"></script>
 </body>
 </html>
