Added plants collection and plant imgs added giftset page but no content yet, edited product page radio buttons and some descriptions

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">15% off</span>
-                    <img src="img/card1.png" class="product-thumb" alt="">
+                    <a href="product.html"><img src="img/card1.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
+                    <h2 class="product-brand">White</h2>
                     <p class="product-short-des">a short line about the boquet..</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
@@ -123,7 +123,7 @@
     </section>
     <!-- ---------------------collections -------------------------------------->
 <section class="collection-container">
-    <a href="#" class="collection">
+    <a href="flowercollection.html" class="collection">
         <img src="img/women-collection.png" alt="">
         <p class="collection-title">flowers <br> collection</p>
     </a>
