--- a/search.html
+++ b/search.html
@@ -30,7 +30,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <img src="img/card2.png" class="product-thumb" alt="">
+                    <img src="img/plant2.png" class="product-thumb" alt="">
                     <button class="card-btn">Add to whishlist</button>
                 </div>
                 <div class="product-info">
@@ -103,6 +103,54 @@
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
                     <img src="img/card8.png" class="product-thumb" alt="">
+                    <button class="card-btn">Add to whishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the boquet.</p>
+                    <span class="price">₱450</span><span class="actual-price">₱500</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">10% off</span>
+                    <img src="img/plant1.png" class="product-thumb" alt="">
+                    <button class="card-btn">Add to whishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the boquet.</p>
+                    <span class="price">₱450</span><span class="actual-price">₱500</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">10% off</span>
+                    <img src="img/plant3.png" class="product-thumb" alt="">
+                    <button class="card-btn">Add to whishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the boquet.</p>
+                    <span class="price">₱450</span><span class="actual-price">₱500</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">10% off</span>
+                    <img src="img/plant4.png" class="product-thumb" alt="">
+                    <button class="card-btn">Add to whishlist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the boquet.</p>
+                    <span class="price">₱450</span><span class="actual-price">₱500</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">10% off</span>
+                    <img src="img/plant5.png" class="product-thumb" alt="">
                     <button class="card-btn">Add to whishlist</button>
                 </div>
                 <div class="product-info">
