added cart, all products page ,modified some pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="hero-section">
         <div class="content">
             <img src="img/light-logo.png" class="logo" alt="">
-            <p class="sub-heading">2nd most trusted Flower Store in Quezon City</p>
+            <p class="sub-heading">Shop our online store</p>
         </div>
     </header>   
     <!--  -------------------cards containers------------------------------------------>
