--- a/product.html
+++ b/product.html
@@ -4,9 +4,6 @@
     <title>Product Page</title>
     <link rel="stylesheet " href="css-files/home.css">
     <link rel="stylesheet " href="css-files/product.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <body>
     <nav class="navbar"></nav>
@@ -21,8 +18,8 @@
             </div>
         </div>
         <div class="details">
-            <h2 class="product-brand">Sunflower Boquet</h2>
-            <p class="product-short-des">Introducing our Sunflower Bouquet: Nature's radiant sunshine, carefully hand-picked for maximum cheer. Bring happiness home from Pobeguada</p>
+            <h2 class="product-brand">Sunflower Bouquet</h2>
+            <p class="product-short-des">from Pobeguada</p>
             <span class="product-price">₱450</span>
             <span class="product-actual-price">₱500</span>
             <span class="product-discount">10% off!</span>
@@ -67,7 +64,7 @@
 
     <!------------- Product catalog ----------------------->
     <section class="product">
-        <h2 class="product-category">Boquets</h2>
+        <h2 class="product-category">You may also like:</h2>
         <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
         <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
         <div class="product-container">
@@ -98,7 +95,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <img src="img/card3.png" class="product-thumb" alt="">
+                    <img src="img/plant6.png" class="product-thumb" alt="">
                     <button class="card-btn">Add to whishlist</button>
                 </div>
                 <div class="product-info">
@@ -110,7 +107,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <img src="img/card4.png" class="product-thumb" alt="">
+                    <img src="img/plant4.png" class="product-thumb" alt="">
                     <button class="card-btn">Add to whishlist</button>
                 </div>
                 <div class="product-info">
@@ -170,109 +167,6 @@
         </div>
     </section>
     
-    <section class="product">
-        <h2 class="product-category">Grand Sale</h2>
-        <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
-        <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
-        <div class="product-container">
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">15% off</span>
-                    <img src="img/card1.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet..</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card2.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card3.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card4.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card5.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card6.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card7.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card8.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-        </div>
-    </section>
     
     <footer></footer>
 <!-----------importing reusable templates----------------------->
