--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pobeguada: Create Account</title>
      
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="css-files/signup.css">
 
 </head>
 <body>
