edited links in product pages, added search function, deleted other useless pages and functions

--- a/product-redrose.html
+++ b/product-redrose.html
@@ -36,7 +36,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
+                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -48,7 +48,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
+                    <a href="product-sunflower.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -60,7 +60,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
+                    <a href="product-snake.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -72,7 +72,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/gourmet.png" class="product-thumb" alt=""></a>
+                    <a href="product-gourmet.html"><img src="img/gourmet.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -84,7 +84,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/tulip.png" class="product-thumb" alt=""></a>
+                    <a href="product-tulip.html"><img src="img/tulip.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -96,7 +96,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/hydrangea.png" class="product-thumb" alt=""></a>
+                    <a href="product-hydrangea.html"><img src="img/hydrangea.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -108,7 +108,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/wildflower.png" class="product-thumb" alt=""></a>
+                    <a href="product-wildflower.html"><img src="img/wildflower.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -120,7 +120,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
+                    <a href="product-succulent.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
