--- a/product-bonsai.html
+++ b/product-bonsai.html
@@ -36,96 +36,84 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">15% off</span>
-                    <img src="img/card1.png" class="product-thumb" alt="">
+                    <a href="product-booklover.html"><img src="img/booklover.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet..</p>
+                    <h2 class="product-brand">book lover gift set</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card2.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <span class="discount-tag">15% off</span>
+                    <a href="product-fiddle.html"><img src="img/fiddle.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">fiddle leaf tree</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/plant6.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <span class="discount-tag">15% off</span>
+                    <a href="product-orchid.html"><img src="img/orchid.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">orchid</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/plant4.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <span class="discount-tag">15% off</span>
+                    <a href="product-sunflower.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">Sunflower</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card5.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <span class="discount-tag">15% off</span>
+                    <a href="product-redrose.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">snake plant</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card6.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <span class="discount-tag">15% off</span>
+                    <a href="product-travel.html"><img src="img/travel.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">travel gift set</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card7.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <span class="discount-tag">15% off</span>
+                    <a href="product-succulent.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card8.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">succulent</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
