--- a/product-gourmet.html
+++ b/product-gourmet.html
@@ -36,96 +36,84 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">15% off</span>
-                    <img src="img/card1.png" class="product-thumb" alt="">
+                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet..</p>
+                    <h2 class="product-brand">Roses</h2>
+                    <p class="product-short-des">from pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <img src="img/card2.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-hydrangea.html"><img src="img/hydrangea.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">hydrangea</h2>
+                    <p class="product-short-des">from pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <img src="img/plant6.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-sunflower.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">sunflower</h2>
+                    <p class="product-short-des">from pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <img src="img/plant4.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-bonsai.html"><img src="img/bonsai.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">bonsai</h2>
+                    <p class="product-short-des">from pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <img src="img/card5.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-newparent.html"><img src="img/newparent.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">new parent gift set</h2>
+                    <p class="product-short-des">from pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <img src="img/card6.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-succulent.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">succulent</h2>
+                    <p class="product-short-des">from pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <img src="img/card7.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-wildflower.html"><img src="img/wildflower.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <img src="img/card8.png" class="product-thumb" alt="">
-                    <button class="card-btn">Add to whishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">wild flower</h2>
+                    <p class="product-short-des">from pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
