--- a/product-newparent.html
+++ b/product-newparent.html
@@ -35,7 +35,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
+                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -47,7 +47,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
+                    <a href="product-sunflower.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -59,7 +59,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
+                    <a href="product-snake.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -71,7 +71,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/gourmet.png" class="product-thumb" alt=""></a>
+                    <a href="product-gourmet.html"><img src="img/gourmet.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -83,7 +83,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/tulip.png" class="product-thumb" alt=""></a>
+                    <a href="product-tulip.html"><img src="img/tulip.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -95,7 +95,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/hydrangea.png" class="product-thumb" alt=""></a>
+                    <a href="product-hydrangea.html"><img src="img/hydrangea.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -107,7 +107,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/wildflower.png" class="product-thumb" alt=""></a>
+                    <a href="product-wildflower.html"><img src="img/wildflower.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -119,7 +119,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
+                    <a href="product-succulent.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
