--- a/cart.html
+++ b/cart.html
@@ -10,11 +10,45 @@
 <body>
     <nav class="navbar"></nav>
 
-    
+    <div class="container">
+    <div class="cart">
+        <h2>
+            CART
+        </h2>
+        <div class="listCart">
+        <div class="item">
+            <img src="img/booklover.png">
+                <div class="content">
+                    <div class="name">CoPilot / Black / Automatic</div>
+                    <div class="price">$550 / 1 product</div>
+                </div>
+                <div class="quantity">
+                    <button>-</button>
+                    <span class="value">3</span>
+                    <button>+</button>
+                </div>
+        </div>
+
+
+        </div>
+
+        <div class="buttons">
+            <div class="close">
+                CLOSE
+            </div>
+            <div class="checkout">
+                <a href="checkout.html">CHECKOUT</a>
+            </div>
+        </div>
+    </div>
+    </div>
+
 
     <footer></footer>
     <script src="js-files/nav.js"></script>
     <script src="js-files/home.js"></script>
     <script src="js-files/footer.js"></script>
+    <script src="js-files/app.js"></script>
 </body>
 </html>
+
