--- a/flowercollection.html
+++ b/flowercollection.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css-files/home.css">
     <link rel="stylesheet" href="css-files/search.css">
+    <link rel="stylesheet" href="css-files/nav.css">
 </head>
 <body>
     <nav class="navbar"></nav>
@@ -88,5 +89,6 @@
     <script src="js-files/nav.js"></script>
     <script src="js-files/home.js"></script>
     <script src="js-files/footer.js"></script>
+    <script src="js-files/app.js"></script>
 </body>
 </html>
