--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
     <Title>Pobeguada Flower Store</Title>
     <link rel="stylesheet" href="css-files/home.css">
-
+    <link rel="stylesheet" href="css-files/nav.css">
 
 </head>
-<body>
-
+<body>  
     <nav class="navbar"></nav>
+
  <!---hero section-------->  
     <header class="hero-section">
         <div class="content">
@@ -120,7 +120,8 @@
                 </div>
             </div>
         </div>
-    </section>
+
+
     <!-- ---------------------collections -------------------------------------->
 <section class="collection-container">
     <a href="flowercollection.html" class="collection">
@@ -143,6 +144,8 @@
     <script src="js-files/nav.js"></script>
     <script src="js-files/home.js"></script>
     <script src="js-files/footer.js"></script>
+    <script src="js-files/footer.js"></script>
+    <script src="js-files/app.js"></script>
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
