added array of products in home.js

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <h2 class="product-category">Grand Sale</h2>
         <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
         <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
-        <div class="product-container">
-            <div class="product-card">
+        <div class="product-container" id="flower-card">
+             <!-- <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
                     <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Roses</h2>
+                    <h2>Roses</h2>
                     <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
@@ -39,7 +39,7 @@
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
                     <a href="product-sunflower.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to Cart</button>
+                    <button class="addCart">Add to Cart</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">Sunflower</h2>
@@ -118,7 +118,7 @@
                     <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
-            </div>
+            </div> -->
         </div>
 
 
