--- a/product-1.html
+++ b/product-1.html
@@ -25,7 +25,7 @@
         </div>
     </section>
 
-   
+
 
     <!------------- Product catalog ----------------------->
     <section class="product">
@@ -139,6 +139,7 @@
     <script src="js-files/footer.js"></script>
     <script src="js-files/home.js"></script>
     <script src="js-files/product.js"></script>
+    <script src="js-files/app.js"></script>
 
 
 </body>
