edited page title and restore search.css

--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
                 </div>
             </div>
         </div>
-
-
-    <!-- ---------------------collections -------------------------------------->
+    </section>
+    <!-- ---------------------collections --------------------------------------------->
 <section class="collection-container">
     <a href="flowercollection.html" class="collection">
         <img src="img/flower-collection.png" alt="">
@@ -137,13 +136,13 @@
         <p class="collection-title">gift sets</p>
     </a>
 </section>
-<!-- Reusable footer for the whole website--------------------------------------------->
+
+
 <footer></footer>
 
 <!--Call respective javascript files to apply functions of the website -->
     <script src="js-files/nav.js"></script>
     <script src="js-files/home.js"></script>
-    <script src="js-files/footer.js"></script>
     <script src="js-files/footer.js"></script>
     <script src="js-files/app.js"></script>
     <script type="module">
