--- a/allproducts.html
+++ b/allproducts.html
@@ -12,7 +12,7 @@
 <body>
     
     <nav class="navbar"></nav>
-<!---header hero section -------->  
+<!---hero section -------->  
     <header class="hero-section-allproducts">
         <div class="content">
             <img src="img/all-products-text.png" class="logo" alt="">
