--- a/giftset.html
+++ b/giftset.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plants Collection</title>
+    <title>Gift Sets</title>
 
     <link rel="stylesheet" href="css-files/home.css">
     <link rel="stylesheet" href="css-files/search.css">
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar"></nav>
-<!---header hero section -------->  
+<!---hero section -------->  
     <header class="hero-section-giftset">
         <div class="content">
             <img src="img/gift-sets-text.png" class="logo" alt="">
