added product arrays

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div> -->
         </div>
 
-
+        </section>
     <!-- ---------------------collections -------------------------------------->
 <section class="collection-container">
     <a href="flowercollection.html" class="collection">
